WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49221
Chromium regression (
r71562
): 2 http/tests/appcache/ tests failing
https://bugs.webkit.org/show_bug.cgi?id=49221
Summary
Chromium regression (r71562): 2 http/tests/appcache/ tests failing
Nate Chapin
Reported
2010-11-08 16:21:10 PST
http/tests/appcache/fallback.html and http/tests/appcache/offline-access.html are failing after
http://trac.webkit.org/changeset/71562
It appears that, in chromium, ApplicationCacheHost::maybeLoadResource() can modify its ResourceRequest parameter. Before
r71562
, we then immediately called ResourceHandle::create() with the modified ResourceRequest. Now, the ResourceRequest changes are lost. I think that the call to maybeLoadResource() should be in ResourceLoader::start() instead of ResourceLoader::load(), similar to the call to DocumentLoader::scheduleArchiveLoad().
Attachments
patch
(1.76 KB, patch)
2010-11-08 16:22 PST
,
Nate Chapin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nate Chapin
Comment 1
2010-11-08 16:22:21 PST
Created
attachment 73303
[details]
patch
Michael Nordman
Comment 2
2010-11-08 16:48:00 PST
Comment on
attachment 73303
[details]
patch this fix looks good to me
Adam Barth
Comment 3
2010-11-08 16:50:01 PST
Comment on
attachment 73303
[details]
patch Ok. This change is slightly mysterious to me, but it seems ok.
Adam Barth
Comment 4
2010-11-08 16:50:24 PST
> this fix looks good to me
Thanks Michael.
WebKit Commit Bot
Comment 5
2010-11-08 21:46:10 PST
Comment on
attachment 73303
[details]
patch Rejecting patch 73303 from commit-queue. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=abarth-cq-sl', 'apply-attachment', '--force-clean', '--non-interactive', 73303]" exit_code: 1 Traceback (most recent call last): File "./WebKitTools/Scripts/webkit-patch", line 70, in <module> main() File "./WebKitTools/Scripts/webkit-patch", line 63, in main from webkitpy.tool.main import WebKitPatch File "/Users/abarth/git/webkit-queue/WebKitTools/Scripts/webkitpy/tool/main.py", line 42, in <module> from webkitpy.common.net.rietveld import Rietveld ImportError: No module named rietveld Full output:
http://queues.webkit.org/results/5569015
Adam Barth
Comment 6
2010-11-08 21:54:45 PST
Comment on
attachment 73303
[details]
patch wah?
WebKit Commit Bot
Comment 7
2010-11-08 22:15:40 PST
Comment on
attachment 73303
[details]
patch Clearing flags on attachment: 73303 Committed
r71606
: <
http://trac.webkit.org/changeset/71606
>
WebKit Commit Bot
Comment 8
2010-11-08 22:15:45 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug