2010-11-08  Nate Chapin  <japhet@chromium.org>

Reviewed by Adam Barth.

        Call ApplicationCacheHost::maybeLoadResource() in
        ResourceLoader::start() instead of ResourceLoader::load().
        maybeLoadResource() might mutate the ResourceRequest, and
        in its current location any modifications are lost.

        https://bugs.webkit.org/show_bug.cgi?id=49221

        Fixes a couple of http/tests/appcache tests
        failing on chromium.

        * loader/ResourceLoader.cpp:
        (WebCore::ResourceLoader::load):
        (WebCore::ResourceLoader::start):

git-svn-id: svn://svn.chromium.org/blink/trunk@71606 bbb929c8-8fbe-4397-9dbb-9b2b20218538